--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,6 @@
 //font
 $family-regular:  'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
-$family-title: 'Frank Ruhl Libre', serif;
+$family-title: 'Frank Ruhl Libre', 'Frank Ruhl Libre Fallback', Georgia, serif;
 
 //font-size
 $size-title-1-desktop: 52px;
